manifests/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      containers:
        - name: traefik
          image: docker.io/traefik:v2.9.4
          imagePullPolicy: IfNotPresent
          args:
            - --providers.kubernetesingress=true
            - --entrypoints.traefik.address=:8090
            - --entrypoints.http.address=:8080
            - --accesslog=true
            - --accesslog.fields.defaultmode=keep
            - --accesslog.fields.headers.defaultmode=keep
            - --ping=true
            - --api.insecure=true
            - --api.dashboard=true
            - --api.debug=true
            - --global.checknewversion=false
            - --global.sendAnonymousUsage=false
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
            - name: admin
              containerPort: 8090
          startupProbe:
            httpGet:
              path: /ping
              port: admin
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 55
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: true
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 0
